--- a/views/map.pug
+++ b/views/map.pug
@@ -1,5 +1,4 @@
 extends layout
 
 block content
-    h3 Karta över matställen
-    iframe(src="https://www.google.com/maps/d/u/0/embed?mid=1HK0-rtPhos8AhP36Cm3ZN5Xg6boZq_lg" width="640" height="480")
+    iframe(src="https://www.google.com/maps/d/u/0/embed?mid=1HK0-rtPhos8AhP36Cm3ZN5Xg6boZq_lg")
