--- a/public/css/main.css
+++ b/public/css/main.css
@@ -84,7 +84,7 @@ a.button:hover {
 
 
 .box-shadow {
-    box-shadow: 0px 0px 20px -4px rgba(0,0,0,0.2);
+    box-shadow: 1px 1px 16px 0px #0001;
 }
 
 
