Revert "Rename restaurants.json to menus.json"
This reverts commit 87f9dd72ffb37a3b32d48466fb1eda975dcda159.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -83,12 +83,12 @@ a.button:hover {
 }
 
 
-.card, .box-shadow {
+.box-shadow {
     box-shadow: 1px 1px 16px 0px #0001;
 }
 
 
-.card {
+.day {
     padding: 1px 16px;
     margin: 16px 0;
     background: #f4f4f4;
