--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,6 +14,7 @@ html(lang="en")
         .right.space-between
           a.button(href="/") Dagens lunch
           a.button(href="/map") Karta
+          a.button(href="/time-left") Hinner jag?
     main
       block content
     footer.box-shadow
