--- a/views/time-to-eat.pug
+++ b/views/time-to-eat.pug
@@ -15,5 +15,10 @@ block content
             | Lunchen slutar: 
             input#endTime(type="time" value="13:00")
         br
+        label
+            | Marginal:  
+            input#margin(type="number" value="0")
+            |  minuter
+        br
         input.button(type="button", onclick="getTrips()", value="Kolla var jag hinner äta")
         script(src="/js/time-to-eat.js")
